[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mftparser"
version = "1.0.0"
authors = [
  { name="Colby Saigeon", email="cole.saigeon@gmail.com" },
]
description = "package for parsing mft from volume. a python wheel"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dreadwrr/pyparsec"
Issues = "https://github.com/dreadwrr/pyparsec/issues"

[tool.bdist_wheel]
python-tag = "cp39"
plat-name = "win_amd64"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
